--- a/website/static/templates/donate.html
+++ b/website/static/templates/donate.html
@@ -8,6 +8,8 @@
 <body>
 
   <div class="b-page">
+
+    {{template "Topper"}}
     
     <div class="wallet-container" id="BTC">
       <img src="/static/assets/images/btc.png" alt="qr" class="wallet-qr">
