--- a/website/static/templates/index.html
+++ b/website/static/templates/index.html
@@ -95,6 +95,47 @@
           <span>Medium</span>
         </button>
       </a>
+
+      <a style="border-bottom: none;" href="https://todo.com">
+        <button class="row-btn">
+          <picture>
+            <source srcset="/static/assets/icons/youtube.svg" media="(prefers-color-scheme: dark)">
+            <img src="/static/assets/icons/youtube.svg" alt="medium" class="icon-big">
+          </picture>
+          <span>YouTube</span>
+        </button>
+      </a>
+
+      <a style="border-bottom: none;" href="https://todo.com">
+        <button class="row-btn">
+          <picture>
+            <source srcset="/static/assets/icons/vk.svg" media="(prefers-color-scheme: dark)">
+            <img src="/static/assets/icons/vk.svg" alt="medium" class="icon-big">
+          </picture>
+          <span>ВКонтакте</span>
+        </button>
+      </a>
+
+      <a style="border-bottom: none;" href="https://todo.com">
+        <button class="row-btn">
+          <picture>
+            <source srcset="/static/assets/icons/apple-music.svg" media="(prefers-color-scheme: dark)">
+            <img src="/static/assets/icons/apple-music.svg" alt="medium" class="icon-big">
+          </picture>
+          <span>Apple Music</span>
+        </button>
+      </a>
+
+      <a style="border-bottom: none;" href="https://todo.com">
+        <button class="row-btn">
+          <picture>
+            <source srcset="/static/assets/icons/facebook.svg" media="(prefers-color-scheme: dark)">
+            <img src="/static/assets/icons/facebook.svg" alt="medium" class="icon-big">
+          </picture>
+          <span>Facebook</span>
+        </button>
+      </a>
+
     </p>
 
     <!-- <p>
