--- a/website/static/templates/tpl_topper.html
+++ b/website/static/templates/tpl_topper.html
@@ -1,10 +1,18 @@
 {{define "Topper"}}
 <div class="topper">
     <div class="infobar">
-        <p>v1.0.0 ~ 06fbb06d&nbsp;&nbsp;|&nbsp;&nbsp;🟢&nbsp;&nbsp;🔴&nbsp;&nbsp;🟡</p>    
+        <p>v1.0.0 ~ 06fbb06d&nbsp;|
+            &nbsp;<a href="/info-bot" class="emoji-btn">🟢</a>
+            &nbsp;<a href="/info-database" class="emoji-btn">🔴</a>
+            &nbsp;<a href="/info-controller" class="emoji-btn">🟡</a>
+        </p>    
     </div>
     <div class="controls">
-        ⏬&nbsp;🔄&nbsp;⏹️
+        <p>
+            <a href="/ctrl-update" class="emoji-btn">⏬</a>&nbsp;
+            <a href="/ctrl-restart" class="emoji-btn">🔄</a>&nbsp;
+            <a href="/ctrl-shutdown" class="emoji-btn">⏹️</a>
+        </p>
     </div>
 </div>
 <div style="height: 12px;"></div> <!-- Spacer -->
