--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -152,6 +152,7 @@ html {
 
 .infobar {
     flex: 1;
+    font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New;
 }
 
 .controls {
