--- a/website/static/templates/tpl_topper.html
+++ b/website/static/templates/tpl_topper.html
@@ -10,7 +10,7 @@
     <div class="controls">
         <p>
             <a href="/ctrl-update" class="emoji-btn">⏬</a>&nbsp;
-            <a href="/ctrl-restart" class="emoji-btn">🔄</a>&nbsp;
+            <a href="/ctrl-restart" class="emoji-btn">🔁</a>&nbsp;
             <a href="/ctrl-shutdown" class="emoji-btn">⏹️</a>
         </p>
     </div>
