--- a/website/static/templates/tpl_metadata.html
+++ b/website/static/templates/tpl_metadata.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="/static/css/styles.css">
 <link rel="stylesheet" href="/static/css/newsletter.css">
 <link rel="stylesheet" href="/static/css/wallet.css">
+<link rel="stylesheet" href="/static/css/books.css">
 
 <!-- icons: -->
 <link rel="icon" type="image/png" sizes="32x32" href="/static/assets/favs/favicon-light-32x32.png" media="(prefers-color-scheme: dark)">
