--- a/website/static/css/books.css
+++ b/website/static/css/books.css
@@ -2,10 +2,8 @@
     margin: 30px 0;
     border-radius: 16px;
     overflow: hidden;
-    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
 }
 
-/* Tab navigation */
 .tabs-nav {
     padding-left: auto;
     padding-right: auto;
@@ -15,7 +13,6 @@
 }
 
 .tabs {
-    /* padding: 12px 24px; */
     margin-left: 5px;
     margin-right: 5px;
     background: none;
@@ -26,56 +23,43 @@
     display: flex;
     flex-direction: row;
     flex: 1;
-    /* text-align: center; */
-    /* color: #666; */
-    /* border-bottom: 3px solid transparent; */
-    /* gap: 6px; */
-    /* margin-bottom: 20px; */
-    /* padding: 1px; */
     border-radius: 14px;
     background: #f9f9f9;
-    border: 2px solid #4a4a4a;
+    border: 1px solid #e1e4e8;
     overflow-x: auto;
 }
 
 .tab-special{
-    /* padding: 3px 3px 3px 3px; */
     font-size: 1.3em;
     border-radius: 12px;
     background: #f9f9f9;
-    border: 2px solid #4a4a4a;
+    border: 1px solid #e1e4e8;
     overflow-x: auto;
 }
 
 .tab-button {
-    /* padding: 12px 24px; */
     background: none;
     border: none;
     cursor: pointer;
-    /* font-size: 16px; */
     font-size: 1.1em;
-    font-weight: 500;
+    font-weight: 800;
     transition: all 0.3s ease;
     flex: 1;
     text-align: center;
-    color: #666;
-    /* border-bottom: 3px solid transparent; */
+    color: #000;
     padding: 8px;
     border-radius: 10px;
 }
 
 .tab-button:hover {
-    /* background-color: #eaeaea; */
     color: #333;
 }
 
 .tab-button.active {
-    /* background-color: #fff; */
-    background-color: #fff;
-    /* border-bottom: 2px solid #f9f9f9; */
+    background-color: #1a1a1a;
+    color: #fff;
 }
 
-/* Tab content */
 .tab-content {
     display: none;
     padding: 30px;
@@ -95,14 +79,23 @@
 
     .tabs {
         background: #212121;
-        border: 2px solid #525252;
+        border: 1px solid #4a4a4a;
         color: #fff;
     }
 
     .tab-special {
         background: #212121;
-        border: 2px solid #4a4a4a;
+        border: 1px solid #4a4a4a;
         color: #fff;
+    }
+
+    .tab-button {
+        color: #fff;
+    }
+
+    .tab-button.active {
+        background-color: #fff;
+        color: #000;
     }
 }
 
