--- a/website/static/templates/tpl_footer.html
+++ b/website/static/templates/tpl_footer.html
@@ -1,5 +1,5 @@
 {{define "Footer"}}
-<div class="footer">
+<div class="footer" id="footer">
     <div class="navbar">
         <p><a href="/login" class="emoji-btn">🔑</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/">home</a>&nbsp;&nbsp;|&nbsp;&nbsp;blog&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/books">books</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/donate">support</a></p>    
     </div>
