--- a/website/static/templates/tpl_topper.html
+++ b/website/static/templates/tpl_topper.html
@@ -1,5 +1,5 @@
 {{define "Topper"}}
-<div class="topper">
+<div class="topper" id="topper">
     <div class="infobar">
         <p>v1.0.0 ~ 06fbb06d&nbsp;|
             &nbsp;<a href="/info-bot" class="emoji-btn">🟢</a>
