--- a/website/static/css/books.css
+++ b/website/static/css/books.css
@@ -101,7 +101,7 @@
     height: 14px;
     background-color: #f9f9f9; /*transparent;*/
     cursor: ns-resize;
-    z-index: 10;
+    /* z-index: 10; */
     display: flex;
     align-items: center;
     justify-content: center;
